<resources>
    <string name="app_name" translatable="false">Doggy</string>
    <string name="settings">Настройки</string>
    <string name="logout">Выйти из аккаунта</string>
    <string name="information">Важная информация</string>
    <string name="error_connection">Проверьте подключение к интернету</string>
    <string name="error_analyze_processing">Дождитесь окончания анализа</string>
    <string name="playback_channel_name">Doggy Player</string>
    <string name="changelog" translatable="false">
        - мат
    </string>
    <string name="google_maps_key" translatable="false">AIzaSyDYyUVzeCbk62sahsCdhQ8eDGvdrdOdr68</string>
    <string name="start_auth">Вход</string>
    <string name="start_summary">Мощный функционал для ВК</string>
    <string name="chat_choice">Выберите чат</string>
    <string name="item_friends">Друзья</string>
    <string name="item_messages">Сообщения</string>
    <string name="item_photos">Фотографии</string>
    <string name="item_groups">Группы</string>
    <string name="item_chats">Беседы</string>
    <string name="item_audios">Музыка</string>
    <string name="item_developers">Разработчикам</string>
    <string name="item_requests">Запросы к API</string>
    <string name="item_monitor">Мониторинг</string>
    <string name="friends_choice">Выберите друга</string>
    <string name="friends_reg_date">Дата регистрации</string>
    <string name="friends_reg_date_info">Дата регистрации:
        \n%s\n
        \nПрошло времени:
        \n%,d дней (%,d лет)
        \n%,d часов
        \n%,d минут
    </string>
    <string name="friends_contacts">Контакты</string>
    <string name="friends_birthday">Дни рождения</string>
    <string name="friends_dogs_clean">Очистка от собачек</string>
    <string name="friends_deactivated_info">
        <b>BANNED</b> - Пользователь заблокирован за нарушение правил.
        \n\n<b>DELETED</b> - Пользователь удалил страницу. Такое бывает из-за депрессии,
        либо ему не хватает внимания. Потом восстановит.

    </string>
    <string name="no_dogs">У вас нет собачек. Хотите купить их в нашем зоомагазине?</string>
    <string name="dogs_shop_not_open">Зоомагазин еще не открыт :(</string>
    <string name="buy">Купить</string>
    <string name="dialogs_clean">Очистка диалогов</string>
    <string name="messages_graph">График активности</string>
    <string name="messages_stats">Статистика сообщений</string>
    <string name="messages_analyze">Анализ диалога</string>
    <string name="messages_stats_info" formatted="false">
        <![CDATA[
        <b>Всего сообщений:</b> %,d / %,d
        <br><b>Первое:</b> %s
        <br><b>Последнее:</b> %s
        <br><b>Исходящих:</b> %,d
        <br><b>Входящих:</b> %,d
        <br><b>Пересланных:</b> %,d
        <br><b>Кол-во слов:</b> %,d
        <br><b>Кол-во символов:</b> %,d
        <br><b>Нецензурных слов:</b> ~%,d
        <br>\n
        <br><b>Всего вложений:</b> %,d
        <br><b>Фотографии:</b> %,d
        <br><b>Аудио:</b> %,d
        <br><b>Видео:</b> %,d
        <br><b>Документы:</b> %,d
        <br><b>Голосовые:</b> %,d
        <br><b>Звонки:</b> %,d
        <br><b>Стена:</b> %,d
        <br><b>Стикеры:</b> %,d
        <br><b>Подарки:</b> %,d
        <br><b>Ссылки:</b> %,d
        ]]>
    </string>
    <string name="messages_stats_info_expanded" formatted="false">
        <![CDATA[
        <b>Всего сообщений:</b> %,d / %,d • %,d%%
        <br><b>Первое:</b> %s
        <br><b>Последнее:</b> %s
        <br><b>Исходящих:</b> %,d • %.2f%%
        <br><b>Входящих:</b> %,d • %.2f%%
        <br><b>Пересланных:</b> %,d
        <br><b>Кол-во слов:</b> %,d
        <br><b>Кол-во символов:</b> %,d
        <br><b>Нецензурных слов:</b> ~%,d
        <br>\n
        <br><b>Всего вложений:</b> %,d
        <br><b>Фотографии:</b> %,d • %,d гео точек
        <br><b>Аудио:</b> %,d • %s
        <br><b>Видео:</b> %,d
        <br><b>Документы:</b> %,d • %s
        <br><b>Голосовые:</b> %,d • %s
        <br><b>Звонки:</b> %,d • %s
        <br><b>Стена:</b> %,d
        <br><b>Стикеры:</b> %,d
        <br><b>Подарки:</b> %,d
        <br><b>Ссылки:</b> %,d
        ]]>
    </string>
    <string name="msg_top_emoji">Популярные эмодзи</string>
    <string name="messages_top_words">Популярные слова</string>
    <string name="messages_top_days">Топ дней</string>
    <string name="messages_members">Участники</string>
    <string name="more">Показать ещё</string>
    <string name="messages_chat_restore_info">Показывает все ваши беседы,
        в том числе беседы из которых вы вышли,
        и позволяет снова в них войти. К сожалению сообщения,
        если вы их удалили, восстановить уже <b>не получится</b>
    </string>
    <string name="messages_chat_restore_success">Чат востановлен</string>
    <string name="choice_quality">Выберите качество</string>
    <string name="downloading_photos">Скачивание изображений…</string>
    <string name="unsubscribe">Отписаться</string>
    <string name="settings_general">Основное</string>
    <string name="settings_general_summary">Ночная тема, онлайн и другое</string>
    <string name="settings_night_mode">Ночной режим</string>
    <string name="settings_in_subscribers">Вы в подписчиках</string>
    <string name="settings_in_subscribers_summary">Проверять при каждом запуске, кто удалил вас из друзей</string>
    <string name="settings_online">Вечный онлайн</string>
    <string name="settings_online_summary">Посылать аккаунт в онлайн каждые 30 сек. Работает даже при выключеном приложении</string>
    <string name="settings_disable_ads">Отключить рекламу</string>
    <string name="settings_disable_ads_summary">Таким образом вы поддерживаете разработку</string>
    <string name="settings_about">О приложении</string>
    <string name="settings_about_summary">Разработчик, новости, поддержка</string>
    <string name="settings_developer">Разработчик</string>
    <string name="settings_developer_summary">Игорь Морозкин</string>
    <string name="settings_share">Поделиться</string>
    <string name="settings_page_share">Мы будем вам благодарны, если вы расскажете своим друзьям</string>
    <string name="settings_page">Telegram Channel</string>
    <string name="settings_page_summary">Новости и многое другое</string>
    <string name="settings_vk_scripts">VK Scripts</string>
    <string name="settings_vk_scripts_summary">Спасибо за идеи</string>
    <string name="ads_disabled">Спасибо! Реклама отключена. Перезапустите приложение</string>
    <string name="alert_feedback_title">Упс, ошибочка</string>
    <string name="alert_feedback_message">Кажется приложение в прошлый раз завершилось с ошибкой. Хотите написать мне и вместе решить эту проблему?</string>
    <string name="members">Участники</string>
    <string name="invited_by">пригласил(а) %s</string>
    <string name="chat_admin">Создатель</string>
    <string name="disable_ads_message">Вы можете купить лицензию и отключить рекламу <b>навсегда</b>. Либо посмотреть одно короткое видео и отключить рекламу на день</string>
    <string name="action_buy">Купить</string>
    <string name="action_watch_video">Смотреть видео</string>
    <string name="choice_number">Выберите номер</string>
    <string name="download">Скачать</string>
    <string name="hidden_birthdays">Скрытые дни рождения</string>
    <string name="unknown">Неизвестно</string>
    <string name="hidden_birthdays_message">Данная функция является <b>экспериментальной</b>. Возможны нулевые результаты. \nЯ пока точно не могу сказать почему это происходит, ибо работает это через раз на одном и том же человеке. Возможно это защита со стороны вк. Обязательно разберусь. Спасибо за внимание</string>
    <string name="friends_lists">Списки друзей</string>
    <string name="friends_requests">Отписка</string>
    <string name="friends_lists_alert_info">Показывает те списки, в которые добавили вас ваши друзья. Т.е. отображает тех друзей, которые отметили вас, например, как \"Лучшие друзья\", \"Коллеги\". \n\nПридется немного подождать, ибо необходимо проверить всех друзей ваших друзей. Сложная схема, да?</string>
    <string name="you">\u0020(Вы)\u0020</string>
    <string name="works">работает</string>
    <string name="long_click_to_select_all">Сделайте долгое нажатия чтобы выделить все</string>
    <string name="select_more_friends">Выберите хотя бы одного друга</string>
    <string name="deleting">Удаление…</string>
    <string name="groups_clean">Выход из групп</string>
    <string name="type_group">группа</string>
    <string name="type_page">публичная страница</string>
    <string name="type_event">мероприятие</string>
    <string name="no_photos">Нет изображений</string>
    <string name="success">Выполнено</string>
    <string name="settings_other">Прочее</string>
    <string name="settings_proxy">Прокси</string>
    <string name="settings_api_domain">Домен API</string>
    <string name="settings_oauth_domain">Домен OAuth</string>
    <string name="text_label_login">Логин или email</string>
    <string name="text_label_password">Пароль</string>
    <string name="settings_online_platform">Онлайн платформа</string>
    <string name="settings_online_platform_summary">Смена онлайн идентификатора, тем самым друзья будут думать, что вы онлайн с другого устройства. Работает в паре с вечным онлайном. Возможна блокировка аккаунта, осторожно!</string>
    <string name="stats_share">Отправить в беседу</string>
    <string name="sync_contacts">Синхронизация контактов</string>
    <string name="bulk_download">Массовое скачивание</string>
    <string name="music_folder">Папка с музыкой</string>
    <string name="lyrics">Текст песни</string>
    <string name="find_lyrics">Найти слова</string>
    <string name="bitrate">Битрейт / Размер</string>
    <string name="sort">Сортировка</string>
    <string name="sort_by_default">По умолчанию</string>
    <string name="attachments_title">Вложения</string>
    <string name="login">Войти</string>
    <string name="copy_link">Скопировать ссылку</string>
    <string name="get_audios_size">Узнать размер</string>
    <string name="settings_data_and_memory">Данные и память</string>
    <string name="clear_local_cache">Очистить кэш данных</string>
    <string name="clear_image_cache">Очистить кэш изображений</string>
    <string name="export_database">Экспортировать кэш</string>
    <string name="export_database_summary">Сохранить cache.db в память телефона (messages, users, etc)</string>
    <string name="settings_music_folder">Папка для музыки</string>
    <string name="settings_account">Аккаунт</string>
    <string name="search">Поиск</string>
    <string name="export_to_csv">CSV (Excel)</string>
    <string name="export_to_vcf">VCF (Android)</string>
    <string name="export_to">Экспорт в</string>
    <string name="audio_item_delete">Удалить</string>
    <string name="ignore_list_title">Игнор-лист</string>
    <string name="item_search">Поиск</string>
    <string name="settings_in_memory_db">In-Memory Database</string>
    <string name="settings_in_memory_db_summary">Кеш сохраняется в озу, что заставит приложение работать быстрее. Однако после закрытия приложения он пропадет</string>
    <string name="settings_item_use_audio_cache">Кэшировать треки</string>
    <string name="clear_audio_cache">Очистить кэш треков</string>
    <string name="shuffle">Перемешать</string>
    <string name="scroll_to_bottom">Пробить дно</string>
    <string name="filter">Фильтрация</string>
    <string name="filter_all">Все</string>
    <string name="filter_only_my">Только мои</string>
    <string name="filter_has_geo">С гео точками</string>
    <string name="sort_by_oldest">Сначала старые</string>
    <string name="settings_optimized_sqlite_summary">Ускоряет работу приложения на старых версия дроида на ~30%.\n(Требуется перезапуск приложения)</string>
    <string name="settings_optimized_sqlite">Оптимизированная сборка SQLite</string>
    <string name="send_audio_as_voice">Отправить как голос</string>
</resources>