<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?android:colorPrimary"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="?android:textColorPrimary"
        android:textSize="64sp" />

    <TextView
        android:id="@+id/summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:text="@string/start_summary"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="?android:textColorHint" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:src="@drawable/ic_vector_vk" />

    <com.google.android.material.button.MaterialButton
        app:cornerRadius="8dp"
        app:backgroundTint="?colorAccent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        android:elevation="8dp"
        android:onClick="onAuthClick"
        android:paddingLeft="48dp"
        android:paddingRight="48dp"
        android:text="@string/start_auth"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:typeface="monospace" />
</RelativeLayout>